--- a/SendReduced/src/free/res/values/strings.xml
+++ b/SendReduced/src/free/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appName">Send Reduced Free</string>
+    <string name="appName">Send Reduced Lite</string>
 
 </resources>
